Partial_14Dec2021/force-app/main/default/objects/New_Special_Pricing_Request__c/New_Special_Pricing_Request__c.object-meta.xml
<CustomObject>
    <description>This object stores all the line items that are checked and sent for SPR. The group of items that are selected goes for SPR everytime the project is sent for approval.</description>
    <label>New Special Pricing Request</label>
    <nameField>
        <displayFormat>SPR-{00}</displayFormat>
        <label>SPR Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>New Special Pricing Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>