Partial_14Dec2021/force-app/main/default/objects/New_Special_Pricing_Request__c/fields/Additional_Disc_on_APPL_disc2__c.field-meta.xml
<CustomField>
    <fullName>Additional_Disc_on_APPL_disc2__c</fullName>
    <description>A number field but if want to use it then please consider this as a Percent and do the required calculations</description>
    <formula>((MRP_Post_Discount2__c -  Net_Invoice_Value_from_APPL2__c ) /  MRP_Post_Discount2__c)*100</formula>
    <label>Additional Disc on APPL disc2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>