Partial_14Dec2021/force-app/main/default/objects/New_Special_Pricing_Request__c/fields/Approval_Rejection_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Rejection_Date__c</fullName>
    <formula>Unique_SPR__r.Approved_Rejected_Date__c</formula>
    <label>Approval/Rejection Date</label>
    <type>Date</type>
</CustomField>