Partial_14Dec2021/force-app/main/default/objects/New_Special_Pricing_Request__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <formula>text(Unique_SPR__r.Approval_Status__c)</formula>
    <label>Approval Status</label>
    <type>Text</type>
</CustomField>