Partial_14Dec2021/force-app/main/default/objects/New_Special_Pricing_Request__c/fields/Approver_Comments__c.field-meta.xml
<CustomField>
    <fullName>Approver_Comments__c</fullName>
    <description>This field captures the latest comment by the approver</description>
    <label>Approver Comments</label>
    <type>TextArea</type>
</CustomField>