Partial_14Dec2021/force-app/main/default/objects/New_Special_Pricing_Request__c/fields/Competitors_name__c.field-meta.xml
<CustomField>
    <fullName>Competitors_name__c</fullName>
    <label>Competitors name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACO</fullName>
            </value>
            <value>
                <fullName>Ajay NA</fullName>
            </value>
            <value>
                <fullName>Arecon</fullName>
            </value>
            <value>
                <fullName>Astral</fullName>
            </value>
            <value>
                <fullName>Cosmoplast</fullName>
            </value>
            <value>
                <fullName>Finolex</fullName>
            </value>
            <value>
                <fullName>Geberit</fullName>
            </value>
            <value>
                <fullName>George Fischer</fullName>
            </value>
            <value>
                <fullName>Hindware</fullName>
            </value>
            <value>
                <fullName>Jain Pipes</fullName>
            </value>
            <value>
                <fullName>Jaquar</fullName>
            </value>
            <value>
                <fullName>Kissan</fullName>
            </value>
            <value>
                <fullName>Kohler</fullName>
            </value>
            <value>
                <fullName>Oriplast</fullName>
            </value>
            <value>
                <fullName>Parryware</fullName>
            </value>
            <value>
                <fullName>Poloplast</fullName>
            </value>
            <value>
                <fullName>Prince</fullName>
            </value>
            <value>
                <fullName>Rakhsha</fullName>
            </value>
            <value>
                <fullName>Supreme</fullName>
            </value>
            <value>
                <fullName>Valsir</fullName>
            </value>
            <value>
                <fullName>Viega</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>