Partial_14Dec2021/force-app/main/default/objects/New_Special_Pricing_Request__c/fields/CTC_Value__c.field-meta.xml
<CustomField>
    <fullName>CTC_Value__c</fullName>
    <description>CTC Calculation</description>
    <formula>( MRP_Value__c -  Net_Invoice_Value_from_APPL2__c )/ MRP_Value__c</formula>
    <label>CTC Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>