Partial_14Dec2021/force-app/main/default/objects/New_Special_Pricing_Request__c/fields/Delivery_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Start_Date__c</fullName>
    <label>Delivery Start Date</label>
    <type>Date</type>
</CustomField>