Partial_14Dec2021/force-app/main/default/objects/New_Special_Pricing_Request__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <formula>Unique_SPR__r.Distributor__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributor</label>
    <type>Text</type>
</CustomField>