Partial_14Dec2021/force-app/main/default/objects/New_Special_Pricing_Request__c/fields/Extra_Discount__c.field-meta.xml
<CustomField>
    <fullName>Extra_Discount__c</fullName>
    <label>Extra Discount</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>