Partial_14Dec2021/force-app/main/default/objects/New_Special_Pricing_Request__c/fields/isOfferChecked__c.field-meta.xml
<CustomField>
    <fullName>isOfferChecked__c</fullName>
    <description>If a record gets approved then it gets displayed in the offer section and this button is checked true</description>
    <formula>IF(Approval_Status__c==&apos;Approved&apos;,true,false)</formula>
    <label>isOfferChecked</label>
    <type>Checkbox</type>
</CustomField>