Partial_14Dec2021/force-app/main/default/objects/New_Special_Pricing_Request__c/fields/Net_Invoice_Value_from_APPL2__c.field-meta.xml
<CustomField>
    <fullName>Net_Invoice_Value_from_APPL2__c</fullName>
    <description>The net invoice value from APPL</description>
    <formula>If( ISBLANK(ORC_MARGIN_TO_DLR_DIST__c ), Discounted_Price2__c , ABS(((100 - (ORC_MARGIN_TO_DLR_DIST__c * 100))/100) * Discounted_Price2__c))</formula>
    <label>Net Invoice Value from APPL2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>