Partial_14Dec2021/force-app/main/default/objects/New_Special_Pricing_Request__c/fields/Offer_Probability__c.field-meta.xml
<CustomField>
    <fullName>Offer_Probability__c</fullName>
    <label>Offer Probability</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&lt;50%</fullName>
            </value>
            <value>
                <fullName>60%</fullName>
            </value>
            <value>
                <fullName>70%</fullName>
            </value>
            <value>
                <fullName>80%</fullName>
            </value>
            <value>
                <fullName>90%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>