Partial_14Dec2021/force-app/main/default/objects/New_Special_Pricing_Request__c/fields/Others_Lost_Sales__c.field-meta.xml
<CustomField>
    <fullName>Others_Lost_Sales__c</fullName>
    <description>reason for lost sales</description>
    <label>Others</label>
    <length>100</length>
    <type>Text</type>
</CustomField>