Partial_14Dec2021/force-app/main/default/objects/New_Special_Pricing_Request__c/fields/Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term__c</fullName>
    <label>Payment Term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>100% advance with PO</fullName>
            </value>
            <value>
                <fullName>20% advance &amp; Balance against Delivery</fullName>
            </value>
            <value>
                <fullName>30 days after delivery</fullName>
            </value>
            <value>
                <fullName>45 days after delivery</fullName>
            </value>
            <value>
                <fullName>60 days after delivery</fullName>
            </value>
            <value>
                <fullName>90 days after delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>