Partial_14Dec2021/force-app/main/default/objects/New_Special_Pricing_Request__c/fields/Product_name__c.field-meta.xml
<CustomField>
    <fullName>Product_name__c</fullName>
    <label>Product name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>