Partial_14Dec2021/force-app/main/default/objects/New_Special_Pricing_Request__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>lookup to opportunity (Project ) object</description>
    <label>Project</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>New Special Pricing Requests</relationshipLabel>
    <relationshipName>New_Special_Pricing_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>