Partial_14Dec2021/force-app/main/default/objects/New_Special_Pricing_Request__c/fields/Reason_of_lost_sales__c.field-meta.xml
<CustomField>
    <fullName>Reason_of_lost_sales__c</fullName>
    <label>Reason of lost sales</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Competition offered lower pricing</fullName>
            </value>
            <value>
                <fullName>Product unavailable</fullName>
            </value>
            <value>
                <fullName>Party demanding higher credit period</fullName>
            </value>
            <value>
                <fullName>Party is bad paymaster</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>