Partial_14Dec2021/force-app/main/default/objects/New_Special_Pricing_Request__c/fields/Tentative_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Tentative_Order_Date__c</fullName>
    <label>Tentative Order Date</label>
    <type>Date</type>
</CustomField>