Partial_14Dec2021/force-app/main/default/objects/New_Special_Pricing_Request__c/fields/Unique_Name__c.field-meta.xml
<CustomField>
    <fullName>Unique_Name__c</fullName>
    <description>This field is used for storing the name that is collectively given for each line item</description>
    <label>Unique Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>