Partial_14Dec2021/force-app/main/default/objects/New_Special_Pricing_Request__c/fields/Unique_SPR__c.field-meta.xml
<CustomField>
    <fullName>Unique_SPR__c</fullName>
    <description>related to the unique spr.</description>
    <label>Unique SPR</label>
    <referenceTo>Unique_SPR__c</referenceTo>
    <relationshipLabel>New Special Pricing Requests</relationshipLabel>
    <relationshipName>New_Special_Pricing_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>