Partial_14Dec2021/force-app/main/default/objects/New_Special_Pricing_Request__c/fields/Why_Additional_Discount__c.field-meta.xml
<CustomField>
    <fullName>Why_Additional_Discount__c</fullName>
    <label>Why Additional Discount?</label>
    <type>TextArea</type>
</CustomField>