Partial_14Dec2021/force-app/main/default/objects/New_Special_Pricing_Request__c/validationRules/If_Appl_Std_discount_is_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Appl_Std_discount_is_Zero</fullName>
    <active>true</active>
    <errorConditionFormula>APPL__c ==0.00</errorConditionFormula>
    <errorMessage>You Cannot add the products due to No Std Discount..!</errorMessage>
</ValidationRule>